add_library(
    Core STATIC
    Algorithms.h
    BitBoard.cpp
    BitBoard.h
    Bit.h
    Confidence.h
    Core.h
    CountLastFlip.cpp
    Flips.cpp
    HashTable.h
    HasMoves.cpp
    Interval.cpp
    Interval.h
    Metronome.cpp
    Metronome.h
    MoreTypes.h
    Moves.h
    Player.cpp
    Player.h
    Position.cpp
    Position.h
    PositionGenerator.cpp
    PositionGenerator.h
    PossibleMoves.cpp
    Ranges.h
    Stability.cpp
)