add_library(
    Core STATIC
    Algorithms.h
    BitBoard.cpp
    BitBoard.h
    Bit.h
    Core.h
    CountLastFlip.cpp
    Executor.h
    Flips.cpp
    HashTable.h
    HasMoves.cpp
    Metronome.cpp
    Metronome.h
    MoreTypes.h
    Moves.h
    Player.cpp
    Player.h
    Position.cpp
    Position.h
    PositionGenerator.cpp
    PositionGenerator.h
    PossibleMoves.cpp
    Ranges.h
)